--- a/index2.html
+++ b/index2.html
@@ -62,13 +62,14 @@
         <div class="items"></div>
         <div class="content">
             <div class="text"><i class="fa-solid fa-heart"></i>Gửi em!<i class="fa-solid fa-heart"></i></div>
-            <div class="text-crush">Đi qua vài mối tình đổ vỡ, anh cứ nghĩ bản thân chẳng thể nào yêu thêm ai được nữa. Anh đã quen với cuộc sống làm bất cứ chuyện gì cũng một mình trong một thời gian rất dài. Dài đến mức anh chẳng nhớ nổi chính xác thời gian nữa.
-
-                Nhưng rồi duyên số đã giúp anh gặp được em và rồi anh thích em từ lúc nào chẳng hay.
-                
-                Anh không thể nào kiềm chế được nói chuyện với em, tiếp xúc gần em. Mỗi ngày trôi qua, cảm xúc của anh ngày càng mãnh liệt. Anh không thể ngăn bản thân ngừng nhớ về em, ngừng yêu em. Dường như trái tim này nó chẳng phải là của anh nữa. Tại sao nó lại không nghe lời anh vậy nhỉ?
-                
-                Thật khó để dũng cảm đứng trước mặt em và nói cho em biết rằng anh yêu em. Đó chính là lý do anh ngồi đây viết những dòng này. Đồng ý làm người yêu anh nhé, Quỳnh! Anh yêu em vô điều kiện, dù có chuyện gì xảy ra, anh vẫn mong người anh muốn đi cùng trong cuộc đời này là em!</div>
+            <div class="text-crush">Chào Quỳnh! Tớ là Thắng đây! Lời đầu tiên cho tớ xin lỗi cậu vì đã từng làm cậu bị tổn thương,
+                tớ cũng cảm ơn cậu vì bây giờ đã cho tớ biết thế nào là yêu, trân trọng người mà tớ thích ! Tớ không thể nào
+                kiềm chế được nói chuyện với cậu, tiếp xúc gần cậu . Mỗi ngày trôi qua, cảm xúc của tớ ngày càng mãnh liệt.
+                Tớ không thể ngăn bản thân ngừng nhớ về cậu , ngừng yêu cậu . Dường như trái tim này nó chẳng phải là của tớ nữa. 
+                Tại sao nó lại không nghe lời tớ vậy nhỉ? Thật khó để dũng cảm đứng trước mặt cậu và nói cho cậu biết rằng tớ yêu cậu.
+                Đó chính là lý do tớ ngồi đây viết những dòng này.
+                Cho tớ thêm 1 cơ hội nữa nhé, Quỳnh! dù có chuyện gì xảy ra, tớ vẫn mong người tớ muốn đi cùng trong cuộc đời này là cậu! .
+                Tin tớ đi , tớ sẽ lại tất cả những dịu dàng, yêu thương mà tớ , thế giới này đã nợ cậu 😊😊😊 !</div>
         </div>
     </div>
 </body>
