--- a/index2.html
+++ b/index2.html
@@ -61,7 +61,7 @@
     <div class="wrapper">
         <div class="items"></div>
         <div class="content">
-            <div class="text"><i class="fa-solid fa-heart"></i>Gửi em!<i class="fa-solid fa-heart"></i></div>
+            <div class="text"><i class="fa-solid fa-heart"></i>Gửi Quỳnh!<i class="fa-solid fa-heart"></i></div>
             <div class="text-crush">Chào Quỳnh! Tớ là Thắng đây! Lời đầu tiên cho tớ xin lỗi cậu vì đã từng làm cậu bị tổn thương,
                 tớ cũng cảm ơn cậu vì bây giờ đã cho tớ biết thế nào là yêu, trân trọng người mà tớ thích ! Tớ không thể nào
                 kiềm chế được nói chuyện với cậu, tiếp xúc gần cậu . Mỗi ngày trôi qua, cảm xúc của tớ ngày càng mãnh liệt.
