--- a/index2.html
+++ b/index2.html
@@ -62,14 +62,12 @@
         <div class="items"></div>
         <div class="content">
             <div class="text"><i class="fa-solid fa-heart"></i>Gửi Quỳnh!<i class="fa-solid fa-heart"></i></div>
-            <div class="text-crush">Chào Quỳnh! Tớ là Thắng đây! Lời đầu tiên cho tớ xin lỗi cậu vì đã từng làm cậu bị tổn thương,
-                tớ cũng cảm ơn cậu vì bây giờ đã cho tớ biết thế nào là yêu, trân trọng người mà tớ thích ! Tớ không thể nào
+            <div class="text-crush"> Chào Quỳnh! Tớ là Thắng đây! Lời đầu tiên cho tớ xin lỗi cậu vì đã từng làm cậu bị tổn thương,tớ cũng cảm ơn cậu vì bây giờ đã cho tớ biết thế nào là yêu, trân trọng người mà tớ thích ! Tớ không thể nào
                 kiềm chế được nói chuyện với cậu, tiếp xúc gần cậu . Mỗi ngày trôi qua, cảm xúc của tớ ngày càng mãnh liệt.
                 Tớ không thể ngăn bản thân ngừng nhớ về cậu , ngừng yêu cậu . Dường như trái tim này nó chẳng phải là của tớ nữa. 
-                Tại sao nó lại không nghe lời tớ vậy nhỉ? Thật khó để dũng cảm đứng trước mặt cậu và nói cho cậu biết rằng tớ yêu cậu.
-                Đó chính là lý do tớ ngồi đây viết những dòng này.
+                Tại sao nó lại không nghe lời tớ vậy nhỉ? Thật khó để dũng cảm đứng trước mặt cậu và nói cho cậu biết rằng tớ yêu cậu.Đó chính là lý do tớ ngồi đây viết những dòng này.
                 Cho tớ thêm 1 cơ hội nữa nhé, Quỳnh! dù có chuyện gì xảy ra, tớ vẫn mong người tớ muốn đi cùng trong cuộc đời này là cậu! .
-                Tin tớ đi , tớ sẽ lại tất cả những dịu dàng, yêu thương mà tớ , thế giới này đã nợ cậu 😊😊😊 !</div>
+                Tin tớ đi , tớ sẽ lại tất cả những dịu dàng, yêu thương mà tớ , thế giới này đã nợ cậu!</div>
         </div>
     </div>
 </body>
