--- a/index2.html
+++ b/index2.html
@@ -62,8 +62,8 @@
         <div class="items"></div>
         <div class="content">
             <div class="text"><i class="fa-solid fa-heart"></i>Gửi Bản Thân!<i class="fa-solid fa-heart"></i></div>
-            <div class="text-crush"> せんせい、こんにちは。みなさん、こんにちは。わたしはファンータイン―タンです。今年１９さいです。ベトナムのhatinhからきました。かぞくは５人です。母と父とあにとあねと私です。
-       ハノイこうか大学生のがくせいです。ベトナム人です。日本がすきです。どうぞよろしくおねがいします。                    
+            <div class="text-crush"> 先生、こんにちは。みなさん、こんにちは。わたしはファンータイン―タンです。今年１９さいです。ベトナムのhatinhからきました。かぞくは５人です。母と父とあにとあねと私です。
+       ハノイこうか大学生のがくせいです。ベトナム人です。日本がすきです。サッカーが好きです。毎週、サッカーを五回します。どうぞよろしくおねがいします。                    
                 </div>
         </div>
     </div>
